syntax = "proto3";

option java_multiple_files = true;
option java_package = "messenger.grpc";
option java_outer_classname = "MessengerProto";

package grpc;

service Messenger {
  rpc CreateAccount (CreateAccountRequest) returns (LoginReply) {}
  rpc DeleteAccount (DeleteAccountRequest) returns (StatusReply) {}
  rpc GetAccounts (GetAccountsRequest) returns (GetAccountsReply) {}
  rpc GetUndeliveredMessages (GetUndeliveredMessagesRequest) returns (GetUndeliveredMessagesReply) {}
  rpc SendMessage (SendMessageRequest) returns (StatusReply) {}
  rpc Login (LoginRequest) returns (LoginReply) {}
  rpc Logout (LogoutRequest) returns (StatusReply) {}
}

// Separate service for which the clients act *as the service.*
// This allows the server to call `SendMessage` to send a message
// to the correct client.
service MessageReceiver {
  rpc SendMessage (Message) returns (StatusReply) {}
}

// Indicates the success or failure of a request, with optional message
message Status {
  bool success = 1;
  optional string message = 2;
}

// A reply which is used for requests which only return a status.
message StatusReply {
  Status status = 1;
}

// A request which is used for creating accounts
message CreateAccountRequest {
  string ip_address = 1;
  string username = 2;
}

// When the user logs in, the client replies with a unique
// port (if the IP address is duplicated) for the client to use
// to establish the MessageReceiver.
message LoginReply {
  int32 receiver_port = 1;
  Status status = 2;
}

// A request which is used for deleting accounts
message DeleteAccountRequest {
  string username = 2;
}

message GetAccountsRequest {
  string text_wildcard = 2;
}

message GetAccountsReply {
  Status status = 1;
  repeated string accounts = 2;
}

message GetUndeliveredMessagesRequest {
  int32 connection_id = 1;
  string username = 2;
}

message GetUndeliveredMessagesReply {
  Status status = 1;
  repeated Message messages = 2;
}

message Message {
  int64 sent_timestamp = 1;
  string sender = 2;
  string recipient = 3;
  string message = 4;
  optional int64 delivered_timestamp = 5;
}

message SendMessageRequest {
  Message message = 2;
}

message LoginRequest {
  string ip_address = 1;
  string username = 2;
}

message LogoutRequest {
  string username = 2;
}